Update API method for creating stake/unstake tx.
