# rpc/generator/server.go
@@ -70,9 +70,9 @@ func (s *Server) createTxStruct(method string, req *prototype.TxOptionsStakeRequ
 	var tx *prototype.Transaction
 
 	if method == "stake" {
-		tx, err = s.Backend.GenerateStakeTx(req.Fee, req.Key)
+		tx, err = s.Backend.GenerateStakeTx(req.Fee, req.Key, req.Amount)
 	} else {
-		tx, err = s.Backend.GenerateUnstakeTx(req.Fee, req.Key)
+		tx, err = s.Backend.GenerateUnstakeTx(req.Fee, req.Key, req.Amount)
 	}
 
 	if err != nil {
